# ds-web

./: .gitignore  README.md  ds-01-v2.ipynb  ds-01.ipynb  ds-02.ipynb  ds-04.ipynb  ds-hw-01.ipynb  ds-hw-02.ipynb  ds-hw-05.ipynb  pyproject.toml
.github/workflows/: deploy.yml
docs/: color-modes.js  index.html  styles.css
notebooks/: ds-01-v2.qmd  ds-01.qmd  ds-hw-01.qmd
notebooks/partials/: analytics.html  dark-mode.scss  footer.html  styles.css  sync-dark-mode.html
scripts/: merge-libs.sh  verify-libs.sh
